copy changes from issue/6

--- a/src/index.css
+++ b/src/index.css
@@ -359,6 +359,7 @@ body {
 .footer-content {
     display: flex;
     justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
